<resources>
    <string name="app_name">SMU_Quiz</string>
    <string name="dailyQuiz_name">All Com Quiz</string>
    <string name="navigation_drawer_open">네비 열림</string>
    <string name="navigation_drawer_close">네비 닫힘</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="question_num">Quesion 13</string>
    <string name="question_content">데이터의 중복으로 인하여 곤란한 관계연산을 처리할 때 곤란한 현상이 발생하는 것을 무엇이라 하는가?</string>
    <string name="question_1">이상 (Anomaly)</string>
    <string name="question_2">제한 (Restriction)</string>
    <string name="question_3">종속성 (Dependency)</string>
    <string name="question_4">변환 (Translation)</string>
    <string name="Wrong_Algorithm">Wrong problem - Algorithm</string>
    <string name="wrong_problem">Wrong problem - %s</string>
    <string name="question">Question) %s</string>
    <string name="answer">정답 %d</string>

    <string name="total_result">50 문제 중 19 문제를 맞았습니다!</string>
    <string name="goto_wrong">오답 확인하러 가기</string>
    <string name="goto_main">메인화면으로</string>
    <string name="aWrongAnswer">aWrongAnswer() { \n ... \n }</string>
    <string name="goToMain">goToMain() { \n ... \n }</string>
    <string name="solve">오답풀이</string>
    <string name="mock_test_start">전에 푸시던 문제를 이어서\n푸시겠습니까?</string>
    <string name="mock_continue">이어풀기</string>
    <string name="mock_new">새로 풀기</string>
    <string name="daily_stop">문제풀기를 중단하시겠습니까?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="SolveProblem">Solve a Problem</string>
    <string name="goDdaily">Go to Daily Quiz</string>
    <string name="change_problem_type">Change problem type</string>
    <string name="go">Go!</string>
    <string name="mock_test">Mock Test</string>
    <string name="hello_world">
        <![CDATA[<Hello! World/> \n\n Click to solve the problem]]></string>
    <string name="check_mock"><![CDATA[<Check your skills through a mcok test!/>]]></string>

    <string name="algorithm">algorithm</string>
    <string name="database">database</string>
    <string name="softwareEngineering">softwareEngineering</string>
    <string name="operationSystem">operationSystem</string>
    <string name="computerNetwork">computerNetwork</string>
    <string name="computerStructure">datacomputerStructurebase</string>
    <string name="dataStructure">dataStructure</string>
    <string name="algorithm_h">알고리즘</string>
    <string name="database_h">DB</string>
    <string name="softwareEngineering_h">소프트웨어\n공학</string>
    <string name="operationSystem_h">운영체제</string>
    <string name="computerNetwork_h">컴퓨터\n네트워크</string>
    <string name="computerStructure_h">컴퓨터\n구조</string>
    <string name="dataStructure_h">자료구조</string>

</resources>

