<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_marginTop="80dp"
              android:layout_marginRight="50dp"
              android:layout_marginLeft="50dp"
              android:layout_marginBottom="50dp"
              android:background="@drawable/round_rectangle_fill"
              android:backgroundTint="@color/white1"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="10dp"
              android:paddingRight="15dp"
              android:paddingLeft="15dp">

    <TextView
            android:id="@+id/tvTotalResult"
            android:layout_weight="0.7"
            android:background="@drawable/underline"
            android:textSize="24sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:textColor="@color/black5"
            android:letterSpacing="0.1"
            android:padding="20dp"
            android:gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/clGotoWrongAnswer"
            android:layout_weight="0.9"
            android:layout_width="match_parent"
            android:layout_height="0dp">
        <TextView
                android:id="@+id/tvGotoWrongAnswer"
                android:text="@string/goto_wrong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/black0"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/SIZE_15"/>
        <TextView
                android:id="@+id/tvBoxWrongAnswer"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:clickable="true"
                android:layout_marginTop="10dp"
                android:text="@string/aWrongAnswer"
                android:background="@drawable/select_goto"
                android:textColor="@drawable/select_goto"
                android:textSize="14sp"
                android:fontFamily="sans-serif-medium"
                android:padding="20dp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvGotoWrongAnswer"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/clGotoMain"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/activity_margin20"
            android:layout_width="match_parent"
            android:layout_height="0dp">

        <TextView
                android:id="@+id/tvGotoMain"
                android:text="@string/goto_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/black0"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/SIZE_15"/>
        <TextView
                android:id="@+id/tvBoxGotoMain"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/goToMain"
                android:background="@drawable/select_goto"
                android:textColor="@drawable/select_goto"
                android:textSize="14sp"
                android:fontFamily="sans-serif-medium"
                android:padding="20dp"
                android:textStyle="normal"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/tvGotoMain"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>


</LinearLayout>