<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout_wrong_analysis"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white5"
        android:fitsSystemWindows="true"
        tools:openDrawer="start">
    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white1"
            tools:context=".worng.WrongAnalysisActivity">

        <include
                android:id="@+id/wrong_analysis_global_title"
                layout="@layout/item_global_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:id="@+id/tvWorngAnalysis"
                android:layout_width="wrap_content"
                android:layout_height="53dp"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:fontFamily="sans-serif"
                android:text="오답현황"
                android:textColor="@color/black0"
                android:letterSpacing="0.05"
                app:layout_constraintStart_toStartOf="@+id/v1WorngNote"
                app:layout_constraintTop_toBottomOf="@+id/wrong_analysis_global_title"/>

        <View
                android:id="@+id/v1WorngNote"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray2"
                app:layout_constraintTop_toBottomOf="@+id/tvWorngAnalysis"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/activity_margin20"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/activity_margin20"/>


        <com.smu.sangmyung.smu_quiz.worng.LineGraphView
                android:id="@+id/LineGraphView"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginStart="@dimen/SIZE_5"
                android:layout_marginTop="@dimen/SIZE_2"
                android:layout_marginEnd="@dimen/SIZE_5"
                android:layout_marginBottom="@dimen/SIZE_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/v1WorngNote"
                app:lineColor="#707070"
                app:lineThickness="2dp"
                app:pointSize="8dp"
                app:textColor="#858585"
                app:textGap="10dp"
                app:textSize="11sp"/>
        <LinearLayout
                android:weightSum="7"
                android:id="@+id/tvLineGraphView"
                android:layout_width="0dp"
                android:layout_height="30dp"
                app:layout_constraintStart_toStartOf="@id/LineGraphView"
                app:layout_constraintEnd_toEndOf="@id/LineGraphView"
                app:layout_constraintTop_toBottomOf="@+id/LineGraphView">

            <TextView
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="normal"
                    android:textSize="10sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/algorithm_h"
            />
            <TextView
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="normal"
                    android:textSize="11sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/database_h"
            />
            <TextView
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="normal"
                    android:textSize="11sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/softwareEngineering_h"
            />
            <TextView
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="normal"
                    android:textSize="11sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/operationSystem_h"
            />
            <TextView
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="normal"
                    android:textSize="11sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/computerNetwork_h"
            />
            <TextView
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="normal"
                    android:textSize="11sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/computerStructure_h"
            />
            <TextView
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="normal"
                    android:textSize="11sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/dataStructure_h"
            />



        </LinearLayout>
        <TextView
                android:id="@+id/tvWorngAnalysisSubject"
                android:layout_width="wrap_content"
                android:layout_height="53dp"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif"
                android:text="과목 분석"
                android:textColor="@color/black0"
                android:letterSpacing="0.05"
                app:layout_constraintStart_toStartOf="@+id/v1WorngNoteSubject"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvLineGraphView"/>

        <View
                android:id="@+id/v1WorngNoteSubject"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray2"
                app:layout_constraintTop_toBottomOf="@+id/tvWorngAnalysisSubject"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/activity_margin20"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/activity_margin20"/>
        <TextView
                android:id="@+id/tvCircleGraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="40%"
                android:background="@null"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="@+id/circleGraph"
                app:layout_constraintTop_toTopOf="@+id/circleGraph"
                app:layout_constraintEnd_toEndOf="@+id/circleGraph"
                app:layout_constraintStart_toStartOf="@+id/circleGraph"/>
        <LinearLayout
                android:id="@+id/circleGraph"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@+id/v1WorngNoteSubject"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/v1WorngNoteSubject" android:layout_marginStart="8dp">


        </LinearLayout>
        <TextView
                android:id="@+id/tvWorngAnalysisTitle"
                android:text="알고리즘"
                android:textColor="@color/black0"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/SIZE_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintTop_toTopOf="@+id/circleGraph"
                app:layout_constraintBottom_toTopOf="@+id/tvWorngAnalysisText"
                app:layout_constraintStart_toEndOf="@+id/circleGraph"
                android:layout_marginStart="8dp"
        />
        <TextView
                android:text="75%의 정답률
총 푼 문제의 수 : 220"
                android:textColor="@color/black2"
                android:textStyle="normal"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvWorngAnalysisText"
                app:layout_constraintTop_toBottomOf="@+id/tvWorngAnalysisTitle"
                app:layout_constraintBottom_toBottomOf="@+id/circleGraph"
                app:layout_constraintStart_toEndOf="@+id/circleGraph"
                android:layout_marginStart="8dp"
        />

    </android.support.constraint.ConstraintLayout>


    <android.support.design.widget.NavigationView
            android:id="@+id/nav_view_wrong_anal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/nav_header_main"
            app:menu="@menu/activity_main_drawer"/>

</android.support.v4.widget.DrawerLayout>